# cpp-dev-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: dev.cpp  dev.hpp  main.cpp  watcher.hpp
